fix hover on smallscreen & break line

--- a/styles/Comment.module.css
+++ b/styles/Comment.module.css
@@ -36,7 +36,8 @@
   display: none;
 }
 
-.comment:hover .reply {
+.comment:hover .reply,
+.replyMobileOrTab {
   display: flex;
 }
 
